# forge

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-cli.yml
backend/: .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  queue.py  worker.py
backend/app/api/: api_keys.py  auth.py  (+9 more)
backend/tests/: conftest.py  test_agent_brain.py  test_agent_tools.py  test_agents.py  test_api.py  test_api_findings.py  test_api_keys.py  test_auth.py  test_brain.py  test_config.py  test_deep_exploit_agent.py  test_execution_judge.py  test_exploit_engine.py  test_exploit_executor.py  test_exploit_script_engine.py  test_health.py  test_knowledge.py  test_models.py  test_org_admin.py  test_org_isolation.py  test_orphan_sweep.py  test_pdf_report.py  test_plan5.py  test_poc_engine.py  test_probe_agent.py  test_recon_agent.py  test_role_enforcement.py  test_scheduler.py  test_super_admin.py  test_task_board.py  test_validator.py  test_worker_health.py  test_ws_auth.py
cli/: forge_ci_template.yml  pyproject.toml
cli/forge_cli/: api.py  ci.py  display.py  main.py  shell.py  stream.py
cli/forge_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cli/forge_cli/commands/: auth.py  ci.py  users.py
cli/tests/: test_api_wait.py  test_ci.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: capture_screenshots.py  record_demo.py
(+105 files in other folders)
