[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-cli"
version = "0.1.0"
description = "FORGE CLI — command-line interface for the FORGE pentesting platform"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.scripts]
forge = "forge_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
